[package]
name = "common-rs"
version = "1.0.0"
edition = "2021"
authors = [ "mail@renauddenis.com" ]

[features]
serde = ["dep:serde"]

[dependencies]
once_cell = "1.19.0"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

regex = "1.10.4"
url = "2.5.0"
glob = "^0.3.1"

derive_builder = "0.20.0"

serde = { version = "1.0.203", optional = true }