[package]
name = "common-rs"
version = "1.0.0"
edition = "2021"
authors = [ "mail@renauddenis.com" ]
publish = false

[features]
serde = ["dep:serde"]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
thiserror = "1.0.61"
derive_builder = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }
serde = { version = "1.0.203", optional = true }
regex = "1.10.4"
url = "2.5.0"
