[package]
name = "cutoff-common"
version = "0.9.0"
edition = "2021"
authors = [ "mail@renauddenis.com" ]
publish = false

[features]
serde = ["dep:serde"]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
thiserror = "2.0.12"
derive_builder = "0.20.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true }
serde = { version = "1.0.219", optional = true }
regex = "1.11.1"
url = "2.5.4"
